--- a/src/main/java/stepDefinition/myFile.properties
+++ b/src/main/java/stepDefinition/myFile.properties
@@ -1,5 +1,3 @@
 URL=https://ultimateqa.com/automation/
 
-URL=https://www.geeksforgeeks.org/
-
-URL=https://www.javatpoint.com/
+reportConfigPath=src/main/resources/extent-config.xml
