--- a/src/main/java/stepDefinition/myFile.properties
+++ b/src/main/java/stepDefinition/myFile.properties
@@ -1,3 +1,3 @@
-URL=https://ultimateqa.com/automation/
+GreenKartURL=https://rahulshettyacademy.com/seleniumPractise/#/
 
 reportConfigPath=src/main/resources/extent-config.xml
